# graph-reflexive-coherence

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PUBLICATION-CHECKLIST.md  README.md  RELEASE-NOTES.md  pyproject.toml  requirements-dev.txt
docs/: README.md
examples/: README.md
experiments/: N05-N11-LGRC-AgenticLikeFoundationRoadmap.md  N12-N18-LGRC-AgencyPrerequisitesHandoff.md  N12-N18-LGRC-AgencyPrerequisitesRoadmap.md  N20-N29-LGRC-BecomingAgencyEcologyHandoff.md  N20-N29-LGRC-BecomingAgencyEcologyRoadmap.md  N30_plus_LGRC_SharedMediumEcologyHandoff.md  N30_plus_candidate_directions.md  N30_plus_experiment_catalog_roadmap.md  README.md
implementation/: Common-BackendStrategyPlan.md  Documentation-Checklist.md  GRC9-GRCL9-GrowthCorrection-Checklist.md  GRC9-GRCL9-GrowthCorrection-Handoff.md  GRC9-GRCL9-GrowthCorrection-Plan.md  GRC9-LifecycleEmitterRepair-Notes.md  GRC9-PhenomenologyDiscovery-Checklist.md  GRC9-PhenomenologyDiscovery-Plan.md  GRC9-Retrospective.md  GRC9V3-ArtifactSurfaceHardening.md  GRC9V3-CanonicalColumnH-ImplementationChecklist.md  GRC9V3-CanonicalColumnH-ImplementationPlan.md  GRC9V3-CanonicalColumnH-LaneDecision.md  GRC9V3-Hessian-Handoff.md  GRC9V3-Hessian-ImplementationChecklist.md  GRC9V3-Hessian-ImplementationPlan.md  GRC9V3-LaneA-SparkGateTraceSchema.md  GRC9V3-LaneC-ComparisonSetup.md  GRC9V3-PhenomenologyDiscovery-Checklist.md  GRC9V3-PhenomenologyDiscovery-Plan.md  GRCL-9-CollapseAdjacentNextBatch.md  GRCL-9-Handoff.md  GRCL-9-ImplementationChecklist.md  GRCL-9-ImplementationPlan.md  (+176 more)
(+4185 files in other folders)
